fix favourite button on mobile

--- a/src/components/Gif/Gif.scss
+++ b/src/components/Gif/Gif.scss
@@ -48,4 +48,10 @@
   &:hover &__star-container {
     opacity: 0.6;
   }
+
+  @media (min-width: 0px) and (max-width: 780px) {
+    &__star-container {
+      opacity: 1;
+    }
+  }
 }
